--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -4,5 +4,5 @@
     <item
         android:id="@+id/action_add_city"
         android:orderInCategory="100"
-        android:title="@string/action_add_city" />
+        android:title="@string/action_add_city_text" />
 </menu>
